fix: jump pictures

--- a/src/components/about/About.module.scss
+++ b/src/components/about/About.module.scss
@@ -104,6 +104,8 @@
 
 @media (max-width: 768px) {
     .about {
+        min-height: 100vh;
+
         &__title {
             margin-bottom: 1.5rem;
         }
