--- a/src/components/games/Games.module.scss
+++ b/src/components/games/Games.module.scss
@@ -103,6 +103,10 @@
             margin-bottom: 1.5rem;
         }
     }
+
+    .content__item {
+        aspect-ratio: 113 / 73;
+    }
 }
 
 @media (max-width: 974px) {
