--- a/src/components/welcome/Welcome.module.scss
+++ b/src/components/welcome/Welcome.module.scss
@@ -4,6 +4,7 @@
     @include flex-container($align-items: center, $justify-content: center, $gap: 0rem 5.25rem);
     grid-column: 1 / -1;
     grid-row: 1 / -1;
+    overflow: hidden;
     min-height: 25rem;
     height: 100vh;
 
